@@ -1,6 +1,5 @@
 package uk.gov.justice.laa.maat.scheduled.tasks.service;
 
-import java.util.Collections;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -9,6 +8,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import uk.gov.justice.laa.maat.scheduled.tasks.client.CrownCourtLitigatorFeesApiClient;
+import uk.gov.justice.laa.maat.scheduled.tasks.config.BillingConfiguration;
 import uk.gov.justice.laa.maat.scheduled.tasks.dto.ApplicantBillingDTO;
 import uk.gov.justice.laa.maat.scheduled.tasks.entity.ApplicantBillingEntity;
 import uk.gov.justice.laa.maat.scheduled.tasks.enums.BillingDataFeedRecordType;
@@ -20,6 +20,7 @@ import uk.gov.justice.laa.maat.scheduled.tasks.request.UpdateApplicantsRequest;
 import uk.gov.justice.laa.maat.scheduled.tasks.utils.FileUtils;
 
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestEntityDataBuilder.getPopulatedApplicantBillingEntity;
 import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestModelDataBuilder.getApplicantDTO;
 
@@ -28,6 +29,7 @@ class ApplicantBillingServiceTest {
 
     private static final int TEST_ID = 1;
     private static final int FAILING_TEST_ID = 2;
+    private static final int BATCH_SIZE = 2;
     private static final String USER_MODIFIED = "TEST";
 
     @Mock
@@ -38,38 +40,31 @@ class ApplicantBillingServiceTest {
     private BillingDataFeedLogService billingDataFeedLogService;
     @Mock
     private CrownCourtLitigatorFeesApiClient crownCourtLitigatorFeesApiClient;
+    @Mock
+    private BillingConfiguration billingConfiguration;
     @InjectMocks
     private ApplicantBillingService applicantBillingService;
 
+
     @Test
-    void giveCCLFDataAvailable_whenSendApplicantsToBillingIsInvoked_thenDatabaseUpdatedAndBillingCalled() {
+    void givenApplicantDataExists_whenFindApplicantsForBillingIsInvoked_thenApplicantDataIsReturned() {
         ApplicantBillingEntity entity = getPopulatedApplicantBillingEntity(TEST_ID);
         ApplicantBillingDTO dto = getApplicantDTO(TEST_ID);
 
-        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(List.of(entity));
+        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(
+            List.of(entity, entity));
         when(applicantMapper.mapEntityToDTO(entity)).thenReturn(dto);
+
         when(applicantBillingRepository.resetApplicantBilling(anyList(), anyString())).thenReturn(1);
         ResponseEntity<String> apiResponse = new ResponseEntity<>("body here", HttpStatus.OK);
         when(crownCourtLitigatorFeesApiClient.updateApplicants(any())).thenReturn(apiResponse);
+        when(billingConfiguration.getBatchSize()).thenReturn(BATCH_SIZE);
         
         applicantBillingService.sendToBilling(USER_MODIFIED);
 
-        verify(applicantBillingRepository).resetApplicantBilling(List.of(TEST_ID), USER_MODIFIED);
-        verify(billingDataFeedLogService).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(dto).toString());
-        verify(crownCourtLitigatorFeesApiClient).updateApplicants(any(UpdateApplicantsRequest.class));
-    }
+        List<ApplicantBillingDTO> applicants = applicantBillingService.getBillingDTOList();
 
-    @Test
-    void givenNoCCLFDataAvailable_whenSendApplicantsToBillingIsInvoked_thenNoActionsPerformed() {
-        ApplicantBillingDTO dto = getApplicantDTO(TEST_ID);
-
-        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(Collections.emptyList());
-
-        applicantBillingService.sendToBilling(USER_MODIFIED);
-
-        verify(applicantBillingRepository, never()).resetApplicantBilling(List.of(TEST_ID), USER_MODIFIED);
-        verify(billingDataFeedLogService, never()).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(dto).toString());
-        verify(crownCourtLitigatorFeesApiClient, never()).updateApplicants(any(UpdateApplicantsRequest.class));
+        assertEquals(List.of(dto, dto), applicants);
     }
 
     @Test
@@ -89,10 +84,11 @@ class ApplicantBillingServiceTest {
         when(applicantMapper.mapEntityToDTO(successEntity)).thenReturn(successDTO);
         when(applicantMapper.mapEntityToDTO(failingEntity)).thenReturn(failingDTO);
         when(applicantBillingRepository.resetApplicantBilling(anyList(), anyString())).thenReturn(1);
+        when(billingConfiguration.getBatchSize()).thenReturn(BATCH_SIZE);
 
         applicantBillingService.sendToBilling(USER_MODIFIED);
         
-        verify(billingDataFeedLogService).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(successDTO, failingDTO).toString());
+        verify(billingDataFeedLogService).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(successDTO, failingDTO));
         verify(crownCourtLitigatorFeesApiClient).updateApplicants(any(UpdateApplicantsRequest.class));
         verify(applicantBillingRepository).saveAll(List.of(failingEntity));
     }
